--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Small library for linear gradient creation and color manipulation.",
   "main": "index.js",
   "scripts": {
+    "build" : "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^3.9.6"
+  }
 }
