--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Small library for linear gradient creation and color manipulation.",
   "main": "index.js",
   "scripts": {
-    "build" : "tsc",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "^2.0.5",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.6"
   }
 }
