add metadata to package.json. add src folder to build

--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "color-utilities",
   "version": "1.0.0",
   "description": "Small library for linear gradient creation and color manipulation.",
+  "types": "lib/index.d.ts",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["color", "gradient", "gradient generator", "color gradient", "linear gradient"],
+  "author": "philbaker4",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.4",
