--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "multicolor gradient"
   ],
   "author": "philbaker4",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "jest": "^26.1.0",
